# jeuuuuu

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build.sh  main.cpp  monstre.cpp  objet.cpp  personage.cpp
include/: Mine.h  Random.h  character.h  character_creation.h  currency.h  inventory.h  jeu.h  save_system.h
scripts/: ai_prompt.py  build.sh  lint.sh  run.sh
src/: CMakeLists.txt  GameAI.cpp  GameAI.h  character_creation.cpp  currency.cpp  inventory.cpp  jeu.cpp  jeu.h  jouet.cpp  jouet.h  main.cpp  menu.cpp  menu.h  mine.cpp  miner_main.cpp  monstre.cpp  objet.cpp  parametre.cpp  parametre.h  personage.cpp  personage.h  save_system.cpp  ui_helpers.cpp  ui_helpers.h
src/parametres/: parametres.cpp  parametres.h
